# Lim.one

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  QUICKSTART.md  README.md
.github/workflows/: build.yml
Docs/: CHANGELOG.json  CHANGELOG.md  TECHNICAL_DETAILS.md  USER_MANUAL.md  parameters.csv
Docs/release/: RELEASE-CHEATSHEET.md  RELEASE-FIXES.md  RELEASE-README.md  RELEASE.md  VERSION-SYNC-QUICK.md  VERSION-SYNC.md
Limone/: CMakeLists.txt
Limone/Source/DSP/: Clipper.h  ClipperHardClipper.h  ClipperSoftClipper.h  Limiter.h  LimiterClassic.h  LimiterModern.h
Limone/Source/DSP/LUFSMeter/: Ebu128LoudnessMeter.cpp  Ebu128LoudnessMeter.h  MacrosAndJuceHeaders.h
Limone/Source/DSP/LUFSMeter/filters/: SecondOrderIIRFilter.cpp  SecondOrderIIRFilter.h
Limone/Source/GUI/: PluginEditor.cpp  PluginEditor.h
Limone/Source/Plugin/: LimiterCurves.h  PluginProcessor.cpp  PluginProcessor.h
Limone/Source/Resources/web/: index.html
Limone/Source/Resources/web/css/: fonts.css
Limone/Source/Resources/web/js/: controls.js  init.js  ipc.js  state.js  ui.js
config/: .releaserc.json  Makefile.release
scripts/: build_limone.sh  make_installer_pkg.sh  make_win_build_package.ps1  release-diagnose.sh  release-sync-version.sh  release.ps1
